third_party/move/move-compiler/tests/move_check/inlining/bug_9717_looponly.exp
error[E07006]: ambiguous usage of variable
   ┌─ tests/move_check/inlining/bug_9717_looponly.move:20:20
   │
 8 │         let flipsref5 = &flips;
   │                         ------ It is still being borrowed by this reference
   ·
20 │         let _v2 =  flips;
   │                    ^^^^^
   │                    │
   │                    Ambiguous usage of variable 'flips'
   │                    Try an explicit annotation, e.g. 'move flips' or 'copy flips'
   │
   = Ambiguous inference of 'move' or 'copy' for a borrowed variable's last usage: A 'move' would invalidate the borrowing reference, but a 'copy' might not be the expected implicit behavior since this the last direct usage of the variable.

